--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="chat"></div>
 
   <script>
-    const socket = new WebSocket("ws://localhost:3000");
+    const socket = new WebSocket("ws://54.224.215.163:3000");
 
     socket.onopen = () => {
       console.log("Conectado al servidor WebSocket");
